[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allensdk"
version = "2.16.2"
description = "Core libraries for the allensdk."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Allen-Institute"
authors = [
    { name = "Allen Institute for Brain Science", email = "instituteci@alleninstitute.org" },
]
keywords = ["neuroscience", "bioinformatics", "scientific"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "aiohttp",
    "argschema",
    "boto3",
    "cachetools",
    "glymur",
    "h5py",
    "hdmf!=3.5.*,!=3.6.*,!=3.7.*,!=3.8.*",
    "jinja2",
    "matplotlib",
    "ndx-events",
    "nest_asyncio",
    "numpy",
    "packaging",
    "pandas>=1.5.3,<3",
    "psycopg2-binary",
    "pynrrd",
    "pynwb<3",
    "python-dateutil",
    "pytz",
    "requests",
    "requests-toolbelt",
    "scikit-image",
    "scipy",
    "seaborn",
    "semver",
    "simplejson",
    "simpleitk",
    "sqlalchemy",
    "statsmodels",
    "tables",
    "tqdm",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/AllenInstitute/AllenSDK"
Documentation = "https://allensdk.readthedocs.io"

[project.scripts]
bps = "allensdk.model.biophys_sim.bps_command:main"

[project.optional-dependencies]
test = [
    "pytest>=4.4.0,<9",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "coverage",
    "moto>=3,<5",
    "flake8",
    "pylint",
    "jinja2",
    "numpydoc",
    "jupyter>=1.0.0,<2.0.0",
]
docs = [
    "pep8",
    "flake8",
    "pylint",
    "numpydoc",
    "jupyter",
    "docutils",
    "markupsafe",
]
dev = [
    "nbconvert",
    "papermill",
    "traitlets",
    "ipython",
    "ipykernel",
]
notebooks = [
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["allensdk"]
exclude = ["allensdk/test", "allensdk/test_utilities"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",   # module-level import not at top of file
    "E741",   # ambiguous variable name (l, O, I, etc.)
    "F403",   # wildcard import used
    "F405",   # name may be undefined from wildcard import
]

[tool.pytest.ini_options]
addopts = "--junitxml=test-reports/test.xml"
