[metadata]
name = allensdk
author = David Feng
author-email = davidf@alleninstitute.org
summary = Core libraries for the allensdk.
description-file = README.md
classifier = 
	Development Status :: 3 - Alpha',
	Intended Audience :: Science/Research',
	Natural Language :: English',
	Operating System :: OS Independent',
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Topic :: Scientific/Engineering :: Bio-Informatics

[build_sphinx]
source-dir = .
build-dir = doc/_build
all_files = 1

[upload_sphinx]

[upload-dir]

[sdist]
formats = bztar,gztar,zip

[bdist]
formats = rpm

[pytest]
pep8maxlinelength = 200
pep8ignore = E124 E201 E202 E231 E401 W293 W291

[pep8]
maxlinelength = 200
ignore = E124 E201 E202 E231 E401 W293 W291

[lint]
lint-output-format = html
lint-files-output = y
lint-reports = y
lint-output = lint

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

